--- a/CampusOfCircle Maven Webapp/pom.xml
+++ b/CampusOfCircle Maven Webapp/pom.xml
@@ -246,6 +246,17 @@
 		    <artifactId>javax.servlet-api</artifactId>
 		    <version>3.0.1</version>
 		</dependency>
+			<!-- jstl标签的使用   -->
+		<!-- <dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>taglibs</groupId>
+			<artifactId>standard</artifactId>
+			<version>1.1.2</version>
+		</dependency> -->
 <!-- servlet支持 -->
 
     <dependency>
