--- a/CampusOfCircle Maven Webapp/src/main/webapp/WEB-INF/web.xml
+++ b/CampusOfCircle Maven Webapp/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
   <display-name>Archetype Created Web Application</display-name>
-  	<!--配置监听去找到springxml：contextConfigLocation在 ContextLoaderListener类中的默认值是 /WEB-INF/applicationContext.xml-->
 	 <listener>
+	 	<!--配置监听去找到springxml：contextConfigLocation在 ContextLoaderListener类中的默认值是 /WEB-INF/applicationContext.xml-->
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+		<!--去监听log4j的文件-->
+		<listener-class> org.springframework.web.util.Log4jConfigListener</listener-class> 
 	 </listener> 
 	 <context-param>
 		<param-name>contextConfigLocation</param-name>
@@ -51,5 +53,20 @@
 		<url-pattern>/</url-pattern>
 </servlet-mapping>
 <!-- 此servlet拦截所有请求交给springMVC.XML处理 -->
+<!-- log4j日志功能 -->
+	<context-param>     
+      <param-name>log4jConfigLocation</param-name>     
+      <param-value>classpath*:log4j.properties</param-value>     
+   </context-param> 
+    <!--启动一个watchdog线程每1800秒扫描一下log4j配置文件的变化-->     
+   <context-param>     
+      <param-name>log4jRefreshInterval</param-name>     
+      <param-value>6000</param-value>     
+   </context-param>
+ <!-- log4j日志功能 -->    
+   
+
+
+
 
 </web-app>
