--- a/CampusOfCircle Maven Webapp/pom.xml
+++ b/CampusOfCircle Maven Webapp/pom.xml
@@ -117,14 +117,19 @@
 		</dependency>
 		<!-- spring使用日志文件依赖 -->
 		<dependency>
-		    <groupId>org.apache.logging.log4j</groupId>
-		    <artifactId>log4j-core</artifactId>
-		    <version>2.6.2</version>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.17</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.apache.logging.log4j</groupId>
-		    <artifactId>log4j-api</artifactId>
-		    <version>2.6.2</version>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-api</artifactId>
+		    <version>1.7.21</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-log4j12</artifactId>
+		    <version>1.7.21</version>
 		</dependency>
 <!-- spring管理的依赖结束  -->
 
@@ -271,7 +276,7 @@
   <build>
   	<finalName>CampusOfCircle</finalName>
   	<plugins>
-   		<!--使用插件：强制使用jdk1.8编译maven项目 -->
+   		<!--使用插件：强制使用jdk1.7编译maven项目 -->
   		<plugin>
   			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-compiler-plugin</artifactId>
