--- a/CampusOfCircle Maven Webapp/src/main/resources/jdbc.properties
+++ b/CampusOfCircle Maven Webapp/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/mybatisdemo?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://localhost:3306/campusofcircle?useUnicode=true&characterEncoding=UTF-8
 jdbc.dialect=org.hibernate.dialect.MySQLDialect
 jdbc.username=root
 jdbc.password=123456
