--- a/CampusOfCircle Maven Webapp/src/main/resources/mypath.properties
+++ b/CampusOfCircle Maven Webapp/src/main/resources/mypath.properties
@@ -1,2 +1,2 @@
-uploadPath=D\:/apache-tomcat-7.0.75-windows-x86/apache-tomcat-7.0.75/webapps
-#uploadPath=E\:/Tomcat/apache-tomcat-8.0.41-windows-x86/apache-tomcat-8.0.41/webapps
+#uploadPath=D\:/apache-tomcat-7.0.75-windows-x86/apache-tomcat-7.0.75/webapps
+uploadPath=E\:/Tomcat/apache-tomcat-8.0.41-windows-x86/apache-tomcat-8.0.41/webapps
